# chcli

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  setup.cfg
chcli/: cli.py  common.py  completer.py  completion.py  connection.py  console.py  constants.py  executer.py  key_bindings.py  utils.py
chcli/grammar/: ClickHouseLexer.g4  ClickHouseLexer.interp  ClickHouseLexer.py  ClickHouseLexer.tokens  ClickHouseParser.g4  ClickHouseParser.interp  ClickHouseParser.py  ClickHouseParser.tokens  ClickHouseParserListener.py  ClickHouseParserVisitor.py
tests/: test_executer.py  test_grammer.py
