[tool.poetry]
name = "chcli"
version = "0.1.0"
description = "A Terminal Client for ClickHouse with AutoCompletion and Syntax Highlighting."
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
prompt_toolkit = "*"
asynch = "*"
rich = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
