[tool.poetry]
name = "chcli"
version = "0.1.0"
description = "A Terminal Client for ClickHouse with AutoCompletion and Syntax Highlighting."
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/chcli"
repository = "https://github.com/long2ice/chcli.git"
documentation = "https://github.com/long2ice/chcli"
keywords = ["migrate", "Tortoise-ORM", "mysql"]
packages = [
    { include = "chcli" }
]
include = ["CHANGELOG.md", "LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.8"
prompt_toolkit = "*"
asynch = "*"
rich = "*"
click = "*"
sqlparse = "*"
antlr4-python3-runtime = "*"
async_lru = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "^19.10b0"
pytest = "*"
pytest-xdist = "*"
pytest-asyncio = "*"
bandit = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
chcli = "chcli.cli:main"
